vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__association_list_actual_part_open.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"foo(open, arg => open)\")"
---
Name
  Identifier 'foo'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartOpen
            Keyword(Open)
      Comma
      AssociationElement
        FormalPart
          Name
            Identifier 'arg'
        RightArrow
        ActualPart
          ActualPartOpen
            Keyword(Open)
    RightPar
