vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__attribute_name-2.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix'range\")"
---
Name
  NameDesignatorPrefix
    Identifier 'prefix'
  AttributeName
    Tick
    Keyword(Range)
