vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__attribute_name_signature_expression.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix[return natural]'foo(expr+1)\")"
---
Name
  NameDesignatorPrefix
    Identifier 'prefix'
  AttributeName
    Signature
      LeftSquare
      ReturnType
        Keyword(Return)
        Name
          NameDesignatorPrefix
            Identifier 'natural'
      RightSquare
    Tick
    Identifier 'foo'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            BinaryExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'expr'
              Plus
              LiteralExpression
                AbstractLiteral '1'
    RightPar
