vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__attribute_name_with_invalid_keyword_designator.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
foo'map

== tree ==
Name
  NameDesignatorPrefix
    Identifier 'foo'
  AttributeName
    Tick
    Keyword(Map)

== diagnostics ==
1:5..1:8 unexpected 'map'
