vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__empty_association_list.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
foo()

== tree ==
Name
  NameDesignatorPrefix
    Identifier 'foo'
  ParenthesizedName
    LeftPar
    RightPar

== diagnostics ==
1:5 expected AssociationList
