vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__external_name_absolute.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"<< signal .dut.gen : std_logic >>\")"
---
Name
  ExternalSignalName
    LtLt
    Keyword(Signal)
    AbsolutePathname
      Dot
      PartialPathname
        PathnameElement
          Identifier 'dut'
        Dot
        PathnameElement
          Identifier 'gen'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
    GtGt
